# pycountdata

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmarks/: bench_bb_pvals_R.csv  bench_bb_pvals_py.csv  bench_group.csv  bench_ibb_fc_R.csv  bench_ibb_fc_py.csv  bench_ibb_pvals_R.csv  bench_ibb_pvals_py.csv  bench_results_R.csv  bench_results_python.json  bench_tx.csv  bench_x.csv  benchmark_R.R  benchmark_python.py  compare_benchmarks.py
countdata/: __init__.py  _core.py
countdata/csrc/: bb.c  ibb.c  rmath_standalone.h
scripts/: build_rmath.sh
